Fix form button overlap

--- a/src/style.scss
+++ b/src/style.scss
@@ -302,7 +302,7 @@ form {
     border: 0.1rem solid #ccc;
     border-radius: 2rem;
     box-sizing: border-box;
-    padding: 1rem 2rem;
+    padding: 1rem 2rem !important;
   }
 
   button {
